sumo/tests/od2trips/errors/vmr/vmr_false11/options.od2trips
-n input_net.net.xml -d input_od_vmr.fma -o trips.trips.xml
